k8s/kyverno/verify-images-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-urlshortener-images
  annotations:
    policies.kyverno.io/title: Verify urlshortener images
    policies.kyverno.io/category: Software Supply Chain Security
    policies.kyverno.io/severity: high
    policies.kyverno.io/subject: Pod
spec:
  # For the policy to actually block unsigned images as documented, this should be set to Enforce
  # validationFailureAction: Enforce
  validationFailureAction: Audit
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
    - name: verify-urlshortener
      match:
        any:
          - resources:
              kinds:
                - Pod
              namespaces:
                - api-gateway
                - frontend
                - url-gen
                - url-read
      verifyImages:
      - imageReferences:
        - "ghcr.io/andreistefanciprian/api-gateway*"
        - "ghcr.io/andreistefanciprian/url-gen*"
        - "ghcr.io/andreistefanciprian/url-read*"
        - "ghcr.io/andreistefanciprian/frontend*"
        verifyDigest: false
        required: false
        mutateDigest: false
        repository: "ghcr.io/andreistefanciprian/cosign-signatures"
        imageRegistryCredentials:
          allowInsecureRegistry: false
          secrets:
            - ghcr-credentials
        attestors:
        - entries:
          - keyless:
              issuer: "https://token.actions.githubusercontent.com"
              # subjectRegExp: https://github\.com/andreistefanciprian/.+
              subject: "https://github.com/andreistefanciprian/gh-reusable-workflows/.github/workflows/build_and_push_docker_image_to_ghcr.yaml@main"
              rekor:
                url: https://rekor.sigstore.dev
